# everos

./: Cargo.toml  README.md
.cargo/: config
src/: allocator.rs  gdesct.rs  gdt.rs  interrupts.rs  irupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vgabuf.rs
src/allocator/: bump.rs  fixed_size_block.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
